--- a/tour.html
+++ b/tour.html
@@ -8,7 +8,7 @@
     <style>
         body {
             margin: 0;
-            font-family: 'Orbitron', sans-serif;
+            font-family: "Orbitron", sans-serif;
             color: white;
             background: linear-gradient(to bottom, #ff9933, #ff66b3);
             text-align: center;
@@ -30,7 +30,7 @@
         ul {
             list-style: none;
             padding: 0;
-            max-width: 600px;
+            max-width: 700px;
             margin: 40px auto;
             font-size: 22px;
             line-height: 1.9;
@@ -48,51 +48,51 @@
 <h1>2026 World Tour</h1>
 
 <ul>
-    <li>Seoul, South Korea</li>
-    <li>Tokyo, Japan</li>
-    <li>Kyoto, Japan</li>
-    <li>Osaka, Japan</li>
-    <li>Beijing, China</li>
-    <li>Shanghai, China</li>
-    <li>Bangkok, Thailand</li>
-    <li>Taipei, Taiwan</li>
-    <li>Singapore</li>
-    <li>Manila, Philippines</li>
-    <li>Jakarta, Indonesia</li>
-    <li>Sydney, Australia</li>
-    <li>Melbourne, Australia</li>
-    <li>Auckland, New Zealand</li>
-    <li>Honolulu, Hawaii</li>
-    <li>Los Angeles, California</li>
-    <li>San Francisco, California</li>
-    <li>Seattle, Washington</li>
-    <li>Denver, Colorado</li>
-    <li>Dallas, Texas</li>
-    <li>Houston, Texas</li>
-    <li>Chicago, Illinois</li>
-    <li>Detroit, Michigan</li>
-    <li>Atlanta, Georgia</li>
-    <li>Miami, Florida</li>
-    <li>Orlando, Florida</li>
-    <li>Nashville, Tennessee</li>
-    <li>New Orleans, Louisiana</li>
-    <li>Phoenix, Arizona</li>
-    <li>Boston, Massachusetts</li>
-    <li>New York City, New York</li>
-    <li>Philadelphia, Pennsylvania</li>
-    <li>Toronto, Canada</li>
-    <li>Vancouver, Canada</li>
-    <li>Montreal, Canada</li>
-    <li>Mexico City, Mexico</li>
-    <li>London, England</li>
-    <li>Paris, France</li>
-    <li>Berlin, Germany</li>
-    <li>Rome, Italy</li>
-    <li>Barcelona, Spain</li>
-    <li>Amsterdam, Netherlands</li>
-    <li>Stockholm, Sweden</li>
-    <li>Dublin, Ireland</li>
-    <li>Cape Town, South Africa</li>
+    <li>Seoul, South Korea — January 5</li>
+    <li>Tokyo, Japan — January 9</li>
+    <li>Kyoto, Japan — January 12</li>
+    <li>Osaka, Japan — January 15</li>
+    <li>Beijing, China — January 20</li>
+    <li>Shanghai, China — January 23</li>
+    <li>Bangkok, Thailand — January 28</li>
+    <li>Taipei, Taiwan — February 2</li>
+    <li>Singapore — February 6</li>
+    <li>Manila, Philippines — February 10</li>
+    <li>Jakarta, Indonesia — February 14</li>
+    <li>Sydney, Australia — February 20</li>
+    <li>Melbourne, Australia — February 24</li>
+    <li>Auckland, New Zealand — February 28</li>
+    <li>Honolulu, Hawaii — March 6</li>
+    <li>Los Angeles, California — March 10</li>
+    <li>San Francisco, California — March 14</li>
+    <li>Seattle, Washington — March 18</li>
+    <li>Denver, Colorado — March 22</li>
+    <li>Dallas, Texas — March 26</li>
+    <li>Houston, Texas — March 29</li>
+    <li>Chicago, Illinois — April 2</li>
+    <li>Detroit, Michigan — April 5</li>
+    <li>Atlanta, Georgia — April 9</li>
+    <li>Miami, Florida — April 13</li>
+    <li>Orlando, Florida — April 16</li>
+    <li>Nashville, Tennessee — April 20</li>
+    <li>New Orleans, Louisiana — April 24</li>
+    <li>Phoenix, Arizona — April 28</li>
+    <li>Boston, Massachusetts — May 2</li>
+    <li>New York City, New York — May 6</li>
+    <li>Philadelphia, Pennsylvania — May 10</li>
+    <li>Toronto, Canada — May 14</li>
+    <li>Vancouver, Canada — May 18</li>
+    <li>Montreal, Canada — May 22</li>
+    <li>Mexico City, Mexico — May 28</li>
+    <li>London, England — June 4</li>
+    <li>Paris, France — June 8</li>
+    <li>Berlin, Germany — June 12</li>
+    <li>Rome, Italy — June 16</li>
+    <li>Barcelona, Spain — June 20</li>
+    <li>Amsterdam, Netherlands — June 24</li>
+    <li>Stockholm, Sweden — June 28</li>
+    <li>Dublin, Ireland — July 2</li>
+    <li>Cape Town, South Africa — July 10</li>
 </ul>
 
 </body>
