--- a/stream.html
+++ b/stream.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-O-Bots • Stream</title>
+    <title>Rock-O-Bots | Stream</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -57,6 +57,7 @@
     <a href="index.html">Home</a>
     <a href="stream.html">Stream</a>
     <a href="tour.html">Tour</a>
+    <a href="merch.html">Merch</a>
 </nav>
 
 <div class="content">
