--- a/merch.html
+++ b/merch.html
@@ -87,13 +87,13 @@
     <section class="merch-grid">
 
         <div class="item">
-            <img src="album-cover.png" alt="Rock-O-Bots Shirt">
+            <img src="Rock-O-Bots.png" alt="Rock-O-Bots Shirt">
             <h2>Debugging Bugs T-Shirt</h2>
             <p>Soft cotton shirt featuring the official Debugging Bugs artwork.</p>
         </div>
 
         <div class="item">
-            <img src="album-cover.png" alt="Rock-O-Bots Hoodie">
+            <img src="Rock-O-Bots.png" alt="Rock-O-Bots Hoodie">
             <h2>Rock-O-Bots Hoodie</h2>
             <p>Stay warm with this cozy hoodie printed with the band’s robot design.</p>
         </div>
