--- a/merch.html
+++ b/merch.html
@@ -87,19 +87,19 @@
     <section class="merch-grid">
 
         <div class="item">
-            <img src="Rock-O-Bots.png" alt="Rock-O-Bots Shirt">
+            <img src="892E152B-72CE-4B19-B423-6E05F43B6DBE.png" alt="Rock-O-Bots Shirt">
             <h2>Debugging Bugs T-Shirt</h2>
             <p>Soft cotton shirt featuring the official Debugging Bugs artwork.</p>
         </div>
 
         <div class="item">
-            <img src="Rock-O-Bots.png" alt="Rock-O-Bots Hoodie">
+            <img src="892E152B-72CE-4B19-B423-6E05F43B6DBE.png" alt="Rock-O-Bots Hoodie">
             <h2>Rock-O-Bots Hoodie</h2>
             <p>Stay warm with this cozy hoodie printed with the band’s robot design.</p>
         </div>
 
         <div class="item">
-            <img src="album-cover.png" alt="Rock-O-Bots Poster">
+            <img src="892E152B-72CE-4B19-B423-6E05F43B6DBE.png" alt="Rock-O-Bots Poster">
             <h2>World Tour Poster</h2>
             <p>A glossy poster of the Rock-O-Bots Debugging Bugs World Tour.</p>
         </div>
